# LEGO-Block-Creator

./: .deepsource.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  PLANNING.md  README.md  SECURITY.md  __init__.py  __main__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/agents/: api-agent.md  docs-agent.md  lint-agent.md  test-agent.md
.github/workflows/: build.yml  codeql-analysis.yml  dependency-review.yml  docker-publish.yml  push-to-pypi.yml  pylint.yml  pytest.yml  python-app.yml  test.yml
docs/: CI-CD.md  README.md  TESTING.md  USAGE.md
docs/legal/: CLA_ENTITY.md  CLA_INDIVIDUAL.md  EULA.md  PRIVACY.md  TERMS.md
tests/: test_main.py
