[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "LEGO-Block-Creator"
version = "0.4.0"
authors = [
  { name= "willtheorangeguy" },
]
description = "Offline inventory tracking of LEGO parts and sets through an easy to use CLI."
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Utilities',
]

[project.urls]
"Homepage" = "https://github.com/Dog-Face-Development/LEGO-Block-Creator"
"Bug Tracker" = "https://github.com/Dog-Face-Development/LEGO-Block-Creator/Issues"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=main --cov-report=term-missing --cov-report=html --cov-report=xml"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py", "__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]